tests/typing/pass/empty_ret_void_func.crs
fn main() {
    const a: i32 = 4 + 5;

    return;
}
