tests/typing/fail/for_expr_bool.crs
extern fn print(a : u32);

fn main() {
    for var i : u32 = 0; i; ++i {

    }
}